feat: short memory update optimize and format

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -121,8 +121,16 @@ spring:
         # 短期记忆配置
         short-term-memory:
           enabled: true
-          recent-message-count: 10
+          # 用户角色短期记忆引导模型生成的范围
+          guide-scope: every
+          # 判定需要更新记忆时相似度阈值，范围0~1，默认0.8
+          update-similarity-threshold : 0.8
+          # 参考历史用户提问的条数
+          history-user-messages-num: 10
+          # 记忆类型
           memory-type: in-memory
+
+
 
 logging:
   level:
