--- a/src/main/resources/model-config.json
+++ b/src/main/resources/model-config.json
@@ -15,7 +15,6 @@
     {"name": "lifestyleTravel","modelName": "qwen-max-2025-01-25"},
     {"name": "encyclopedia","modelName": "qwen-max-2025-01-25"},
     {"name": "dataAnalysis","modelName": "qwen-max-2025-01-25"},
-    {"name": "shortMemory","modelName" : "qwen-turbo-2025-04-28"},
-    {"name": "longMemory","modelName" : "qwen-max-2025-01-25"}
+    {"name": "shortMemory","modelName" : "qwen-turbo-2025-04-28"}
   ]
 }
